# ChangeLog for app-editors/vim-core
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.244 2007/03/21 16:02:32 wolf31o2 Exp $

  21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  vim-core-7.0.174.ebuild:
  Stable on alpha/ia64 wrt bug #167816.

  07 Mar 2007; Alexander H. Færøy <eroyf@gentoo.org>
  vim-core-7.0.174.ebuild:
  Marked ~mips; bug #168008

  26 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> vim-core-7.0.174.ebuild:
  Marked stable on amd64 For bug #167816

*vim-core-7.0.201 (24 Feb 2007)

  24 Feb 2007; Mike Kelly <pioto@gentoo.org> +vim-core-7.0.201.ebuild:
  Version bump.

  21 Feb 2007; Markus Rothe <corsair@gentoo.org> vim-core-7.0.174.ebuild:
  Stable on ppc64; bug #167816

  21 Feb 2007; Ferris McCormick <fmccor@gentoo.org> vim-core-7.0.174.ebuild:
  Stable on sparc --- Bug #167816

  21 Feb 2007; Jeroen Roovers <jer@gentoo.org> vim-core-7.0.174.ebuild:
  Stable for HPPA (bug #167816).

  21 Feb 2007; Joseph Jezak <josejx@gentoo.org> vim-core-7.0.174.ebuild:
  Marked ppc stable for bug #167816.

  21 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  vim-core-7.0.174.ebuild:
  stable x86; bug 167816

  18 Feb 2007; Markus Rothe <corsair@gentoo.org> vim-core-7.0.91.ebuild:
  Stable on ppc64

  03 Dec 2006; Jeroen Roovers <jer@gentoo.org> vim-core-7.0.91.ebuild:
  Stable for HPPA.

*vim-core-7.0.174 (30 Nov 2006)

  30 Nov 2006; Mike Kelly <pioto@gentoo.org> +vim-core-7.0.174.ebuild:
  Version bump.

  25 Oct 2006; Fabian Groffen <grobian@gentoo.org> vim-core-7.0.17.ebuild,
  vim-core-7.0.91.ebuild:
  Dropped ppc-macos, see you in prefix.

  25 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  vim-core-7.0.91.ebuild:
  Stable on sparc

  24 Oct 2006; Mike Kelly <pioto@gentoo.org> vim-core-7.0.146.ebuild:
  Dropping ppc-macos keyword, since eselect-1.0.6 isn't keyworded for it,
  either.

*vim-core-7.0.146 (22 Oct 2006)
