@@ -29,6 +29,7 @@ DIST vim-7.0-gentoo-patches-r1.tar.bz2 6749 RMD160 88cead14b07bc3b7113a3e60f2b35
 DIST vim-7.0-r1.tar.bz2 6117202 RMD160 d24982a1b802dad9955940365665163a4641fd74 SHA1 cac7d8980804dff1a3615e0e6a0bdc07cbe31b53 SHA256 e7383b2dfdc6f6df52fb45599eb6c5dc9037b1d3a4077bfe770cb98440b2589e
 DIST vim-patches-7.0.174.tar.gz 257873 RMD160 0bccdff774a7fdbe3c72cdbe3896ed7c6154e9aa SHA1 a25f69e2be17889deee084e2ea21e1b4d245492f SHA256 79aa9eb52f23d91e66034cc6897d7d31a1596d130a3902a4e21824193a53ca51
 DIST vim-patches-7.0.201.tar.gz 291618 RMD160 62bcbd2a6ae0d1967e18eb62523c0141adce1c36 SHA1 eb36b79e301c495a0afe195258cf324c67d9ada2 SHA256 031444112de567319e730b1de48fbb3188a0c843350840cd951c51d9d39c1ad6
+DIST vim-patches-7.0.235.tar.gz 343289 RMD160 c54e63fbc74250e95d2ba242a66cea99ffffeff1 SHA1 6d95f9b4e3ce2c1a45863d73b85a3481ca386cd1 SHA256 0833aae00440155a6b5c507ecdcc00b743889c578b47a967fc4ae9ea456d5779
 EBUILD vim-core-6.4.ebuild 973 RMD160 47c06b61ed0b58d607fd517cd294f279f36f94cd SHA1 015924ac453d06aa6b362106586e1426d28bfcc8 SHA256 4882ad4dfc17db44cbfc1428394f30d58889e9b361d3e9779922f0f37323829e
 MD5 18ac7ff9abfecb8fd4308793c8157334 vim-core-6.4.ebuild 973
 RMD160 47c06b61ed0b58d607fd517cd294f279f36f94cd vim-core-6.4.ebuild 973
@@ -41,10 +42,14 @@ EBUILD vim-core-7.0.201.ebuild 787 RMD160 554101725453e82c257aab876499db98da08c7
 MD5 d5c599180ec8ce9221e68f3c611c763e vim-core-7.0.201.ebuild 787
 RMD160 554101725453e82c257aab876499db98da08c729 vim-core-7.0.201.ebuild 787
 SHA256 49f90641e4afee83084f823844902df28dd977dc94af60e8d636e0b88d25ceeb vim-core-7.0.201.ebuild 787
-MISC ChangeLog 33388 RMD160 e7f2fca69ae1a0996062752e78dd42ba2a5fb4a8 SHA1 d6c7da5650d1c54867dbd25dd675268b5bb81ee0 SHA256 417d270db55f01677eacf78c556e293e8382c4a9859b3af6582096f6fb07554c
-MD5 3e2d2829b917373e691abf933731c4cf ChangeLog 33388
-RMD160 e7f2fca69ae1a0996062752e78dd42ba2a5fb4a8 ChangeLog 33388
-SHA256 417d270db55f01677eacf78c556e293e8382c4a9859b3af6582096f6fb07554c ChangeLog 33388
+EBUILD vim-core-7.0.235.ebuild 787 RMD160 ea0a681f32ca2817c4a08c1f6f311f51c708e235 SHA1 981ddfccaf45c7a07cf7949ff2f51596e0ef374e SHA256 090daa4093893e49716f13ccddcfcbd723b3ebfe5c11f53c76d1a2a822f3101e
+MD5 d5c664774221d3994b807d48cea9b321 vim-core-7.0.235.ebuild 787
+RMD160 ea0a681f32ca2817c4a08c1f6f311f51c708e235 vim-core-7.0.235.ebuild 787
+SHA256 090daa4093893e49716f13ccddcfcbd723b3ebfe5c11f53c76d1a2a822f3101e vim-core-7.0.235.ebuild 787
+MISC ChangeLog 33528 RMD160 7e7cf3735fbbcbdabe98223a54ac31d70a75a673 SHA1 0ed775d5cf2493a6bf0a3a963e2c2ddf833cdc34 SHA256 a75d6081669613b54b2d089749cc8b6839ca8fecacac2dac887fa6874e334ad0
+MD5 f0009346b64991787d4e836391dd1d38 ChangeLog 33528
+RMD160 7e7cf3735fbbcbdabe98223a54ac31d70a75a673 ChangeLog 33528
+SHA256 a75d6081669613b54b2d089749cc8b6839ca8fecacac2dac887fa6874e334ad0 ChangeLog 33528
 MISC metadata.xml 156 RMD160 3e105a159e09ab3231aaa16b01919bcfbf58a0a8 SHA1 fe63ba71f6fd04f1e293fb238af2eba994b0335d SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500
 MD5 f3583430b2f7b0686cafd606b08bf203 metadata.xml 156
 RMD160 3e105a159e09ab3231aaa16b01919bcfbf58a0a8 metadata.xml 156
@@ -58,3 +63,6 @@ SHA256 59f8c2039b7cd4db5847b1acd438a88a42e15dc8fa327df1ff0de5a029ebff13 files/di
 MD5 8bf88614aa3380f617d57428708cda96 files/digest-vim-core-7.0.201 771
 RMD160 225cd90706a9a3f17646e046dd6c2767ac52d26d files/digest-vim-core-7.0.201 771
 SHA256 310cdb94903a866f3c63299566b88821d73a15f2a0c10baad928104ffe8c6f9f files/digest-vim-core-7.0.201 771
+MD5 78e11585cae3c9eb5ada5e2e69b520ac files/digest-vim-core-7.0.235 771
+RMD160 a8a3c435a71dc5c6bad949a619b1d6e7f3c4ba96 files/digest-vim-core-7.0.235 771
+SHA256 b1bda3fa3d3953ec50943d5179d29304c5c89f58d46ffcb32f3a6bea390b9715 files/digest-vim-core-7.0.235 771
