@@ -1,0 +1,25 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vim-core/vim-core-7.0.235.ebuild,v 1.1 2007/04/29 22:25:51 pioto Exp $
+
+EAPI="prefix"
+
+inherit vim
+
+VIM_VERSION="7.0"
+VIM_SNAPSHOT="vim-7.0-r1.tar.bz2"
+VIM_GENTOO_PATCHES="vim-7.0-gentoo-patches-r1.tar.bz2"
+VIM_ORG_PATCHES="vim-patches-${PV}.tar.gz"
+VIMRC_FILE_SUFFIX="-r3"
+
+SRC_URI="${SRC_URI}
+	mirror://gentoo/${VIM_SNAPSHOT}
+	mirror://gentoo/${VIM_GENTOO_PATCHES}
+	mirror://gentoo/${VIM_ORG_PATCHES}"
+
+S=${WORKDIR}/vim${VIM_VERSION/.*}
+DESCRIPTION="vim and gvim shared files"
+KEYWORDS="~amd64 ~ppc-aix ~ppc-macos ~sparc-solaris ~x86 ~x86-macos ~x86-solaris"
+IUSE=""
+DEPEND="${DEPEND}"
+PDEPEND="!livecd? ( app-vim/gentoo-syntax )"
